--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "express-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a boilerplate project used for starting new projects!",
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.1.0",
     "supertest": "^4.0.2"
   },
   "scripts": {
@@ -33,5 +35,8 @@
   "bugs": {
     "url": "https://github.com/SwordSageKeith/express-boilerplate/issues"
   },
-  "homepage": "https://github.com/SwordSageKeith/express-boilerplate#readme"
+  "homepage": "https://github.com/SwordSageKeith/express-boilerplate#readme",
+  "directories": {
+    "test": "test"
+  }
 }
