--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "postgrator-cli": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
