--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "knex": "^0.19.3",
     "morgan": "^1.9.1",
-    "postgrator-cli": "^3.1.0",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "postgrator-cli": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
